[package]
name = "agb_template"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
agb = "0.21.3"  # Latest stable version

[profile.dev]
opt-level = 3   # Optimization level for development
debug = true    # Include debug symbols
panic = "abort" # Reduces binary size

[profile.release]
opt-level = 3   # Maximum optimization
lto = "fat"     # Link-time optimization
debug = true    # Keep debug symbols
panic = "abort" # Reduces binary size
codegen-units = 1 # Further optimization